@@ -1,3 +1,8 @@
+Mon Jan  6 10:55:39 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (setup_dialog): fix default image.
+	Remove debugging g_prints.
+
 2003-01-05  Seth Nickell  <snickell@stanford.edu>
 
 	* gnome-theme-manager.c: (setup_dialog), (main):
